// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Tests > react/internals/MenuList > Basic 1`] = `
<div
  data-dark={false}
>
  <ul
    className="charcoal-menu-list"
  >
    <li
      className="charcoal-list-item"
      data-key="0"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="option"
      tabIndex={-1}
    >
      Menu 
      0
    </li>
    <li
      className="charcoal-list-item"
      data-key="1"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="option"
      tabIndex={-1}
    >
      Menu 
      1
    </li>
    <li
      className="charcoal-list-item"
      data-key="2"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="option"
      tabIndex={-1}
    >
      Menu 
      2
    </li>
    <li
      className="charcoal-list-item"
      data-key="3"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="option"
      tabIndex={-1}
    >
      Menu 
      3
    </li>
    <li
      className="charcoal-list-item"
      data-key="4"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="option"
      tabIndex={-1}
    >
      Menu 
      4
    </li>
    <li
      className="charcoal-list-item"
      data-key="5"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="option"
      tabIndex={-1}
    >
      Menu 
      5
    </li>
    <li
      className="charcoal-list-item"
      data-key="6"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="option"
      tabIndex={-1}
    >
      Menu 
      6
    </li>
    <li
      className="charcoal-list-item"
      data-key="7"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="option"
      tabIndex={-1}
    >
      Menu 
      7
    </li>
    <li
      className="charcoal-list-item"
      data-key="8"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="option"
      tabIndex={-1}
    >
      Menu 
      8
    </li>
    <li
      className="charcoal-list-item"
      data-key="9"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="option"
      tabIndex={-1}
    >
      Menu 
      9
    </li>
  </ul>
</div>
`;

exports[`Storybook Tests > react/internals/MenuList > Disabled 1`] = `
<div
  data-dark={false}
>
  <ul
    className="charcoal-menu-list"
  >
    <li
      className="charcoal-list-item"
      data-key="1"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="option"
      tabIndex={-1}
    >
      MenuItem
    </li>
    <li
      aria-disabled={true}
      className="charcoal-list-item"
      data-key="2"
      onKeyDown={[Function]}
      role="option"
      tabIndex={-1}
    >
      Disabled MenuItem
    </li>
  </ul>
</div>
`;

exports[`Storybook Tests > react/internals/MenuList > Group 1`] = `
<div
  data-dark={false}
>
  <ul
    className="charcoal-menu-list"
  >
    <li
      className="charcoal-menu-item-group"
      role="presentation"
    >
      <span>
        Section1
      </span>
      <ul
        role="group"
      >
        <li
          className="charcoal-list-item"
          data-key="0"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="option"
          tabIndex={-1}
        >
          Menu 
          0
        </li>
        <li
          className="charcoal-list-item"
          data-key="1"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="option"
          tabIndex={-1}
        >
          Menu 
          1
        </li>
        <li
          className="charcoal-list-item"
          data-key="2"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="option"
          tabIndex={-1}
        >
          Menu 
          2
        </li>
        <li
          className="charcoal-list-item"
          data-key="3"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="option"
          tabIndex={-1}
        >
          Menu 
          3
        </li>
        <li
          className="charcoal-list-item"
          data-key="4"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="option"
          tabIndex={-1}
        >
          Menu 
          4
        </li>
      </ul>
    </li>
    <li
      className="charcoal-menu-item-group"
      role="presentation"
    >
      <span>
        Section2
      </span>
      <ul
        role="group"
      >
        <li
          className="charcoal-list-item"
          data-key="5"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="option"
          tabIndex={-1}
        >
          Menu 
          5
        </li>
        <li
          className="charcoal-list-item"
          data-key="6"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="option"
          tabIndex={-1}
        >
          Menu 
          6
        </li>
        <li
          className="charcoal-list-item"
          data-key="7"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="option"
          tabIndex={-1}
        >
          Menu 
          7
        </li>
        <li
          className="charcoal-list-item"
          data-key="8"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="option"
          tabIndex={-1}
        >
          Menu 
          8
        </li>
        <li
          className="charcoal-list-item"
          data-key="9"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="option"
          tabIndex={-1}
        >
          Menu 
          9
        </li>
      </ul>
    </li>
  </ul>
</div>
`;
